SERVER-9647 don't transform 2dsphere desc fields into asc