src/mongo/db/index/s2_simple_cursor.cpp
@@ -46,7 +46,13 @@ namespace mongo {
         BSONObjIterator i(_descriptor->keyPattern());
         while (i.more()) {
             BSONElement e = i.next();
-            specBuilder.append(e.fieldName(), 1);
+            // Checked in AccessMethod already, so we know this spec has only numbers and 2dsphere
+            if ( e.type() == String ) {
+                specBuilder.append( e.fieldName(), 1 );
+            }
+            else {
+                specBuilder.append( e.fieldName(), e.numberInt() );
+            }
         }
         BSONObj spec = specBuilder.obj();
 
